bugfix: Product images upload

--- a/server/config.env
+++ b/server/config.env
@@ -5,3 +5,6 @@ NODE_ENV = "DEVELOPMENT"
 JWT_SECRET = "adlkjnasoi239sjwadkndas9q13320adnakdnad"
 JWT_EXPIRE = '5d'
 COOKIE_EXPIRE = 5
+CLOUDINARY_CLOUD_NAME="dp5wq2vcw"
+CLOUDINARY_API_KEY="447928814514441"
+CLOUDINARY_API_SECRET="h3IGzUxq1UXZGOQ8Ie_ZcHFrgBc"
