--- a/vercel.json
+++ b/vercel.json
@@ -18,11 +18,14 @@
   ],
   "env": {
     "FRONTEND_URL": "localhost",
-    "PORT": "4000",
+    "PORT": "5000",
     "DB_URI": "mongodb+srv://loomUmar1110:umar1110@cellcave.txijojc.mongodb.net/loomecom",
     "NODE_ENV": "DEVELOPMENT",
-    "JWT_SECRET": "sakdjaksjdhkasjnoasdoasdjoas",
-    "JWT_EXPIRE": "10d",
-    "COOKIE_EXPIRE": "10"
+    "JWT_SECRET": "adlkjnasoi239sjwadkndas9q13320adnakdnad",
+    "JWT_EXPIRE": "5d",
+    "COOKIE_EXPIRE": "5",
+    "CLOUDINARY_CLOUD_NAME": "dp5wq2vcw",
+    "CLOUDINARY_API_KEY": "447928814514441",
+    "CLOUDINARY_API_SECRET": "h3IGzUxq1UXZGOQ8Ie_ZcHFrgBc"
   }
 }
